src/OpenCvSharpExtern/imgproc.h

CVAPI(cv::Mat*) imgproc_getRotationMatrix2D(CvPoint2D32f center, double angle, double scale)
{
	cv::Mat ret = cv::getRotationMatrix2D(center, angle, scale);
	return new cv::Mat(ret);

}
CVAPI(void) imgproc_invertAffineTransform(cv::_InputArray* M, cv::_OutputArray *iM)
{
	cv::invertAffineTransform(*M, *iM);
}
CVAPI(cv::Mat*) imgproc_getPerspectiveTransform1(cv::Point2f *src, cv::Point2f *dst)
{
	cv::Mat ret = cv::getPerspectiveTransform(src, dst);
	return new cv::Mat(ret);
}
CVAPI(cv::Mat*) imgproc_getAffineTransform1(cv::Point2f *src, cv::Point2f *dst)
{
	cv::Mat ret = cv::getAffineTransform(src, dst);
	return new cv::Mat(ret);
}
CVAPI(cv::Mat*) imgproc_getAffineTransform2(cv::_InputArray *src, cv::_InputArray *dst)
{
	cv::Mat ret = cv::getAffineTransform(*src, *dst);
	return new cv::Mat(ret);
}
CVAPI(void) imgproc_getRectSubPix(cv::_InputArray *image, CvSize patchSize, CvPoint2D32f center, cv::_OutputArray *patch, int patchType)
{
	cv::getRectSubPix(*image, patchSize, center, *patch, patchType);
}
CVAPI(void) imgproc_integral1(cv::_InputArray *src, cv::_OutputArray *sum, int sdepth)
{
	cv::integral(*src, *sum, sdepth);
}
CVAPI(void) imgproc_integral2(cv::_InputArray *src, cv::_OutputArray *sum, cv::_OutputArray *sqsum, int sdepth)
{
	cv::integral(*src, *sum, *sqsum, sdepth);
}
CVAPI(void) imgproc_integral3(cv::_InputArray *src, cv::_OutputArray *sum, cv::_OutputArray *sqsum, cv::_OutputArray *tilted, int sdepth)
{
	cv::integral(*src, *sum, *sqsum, *tilted, sdepth);
}
CVAPI(void) imgproc_accumulate(cv::_InputArray *src, cv::_OutputArray *dst, cv::_InputArray *mask)
{
	cv::accumulate(*src, *dst, entity(mask));
}
CVAPI(void) imgproc_accumulateSquare(cv::_InputArray* src, cv::_OutputArray *dst, cv::_InputArray *mask)
{
	cv::accumulateSquare(*src, *dst, entity(mask));
}
CVAPI(void) imgproc_accumulateProduct(cv::_InputArray *src1, cv::_InputArray *src2, cv::_OutputArray *dst, cv::_InputArray *mask)
{
	cv::accumulateProduct(*src1, *src2, *dst, entity(mask));
}
CVAPI(void) imgproc_accumulateWeighted(cv::_InputArray *src, cv::_OutputArray *dst, double alpha, cv::_InputArray *mask)
{
	cv::accumulateWeighted(*src, *dst, alpha, entity(mask));
}
CVAPI(double) imgproc_PSNR(cv::_InputArray *src1, cv::_InputArray *src2)
{
	return cv::PSNR(*src1, *src2);
}
CVAPI(CvPoint2D64f) imgproc_phaseCorrelate(cv::_InputArray *src1, cv::_InputArray *src2,
                                  cv::_InputArray *window)
{
	cv::Point2d p = cv::phaseCorrelate(*src1, *src2, entity(window));
	return cvPoint2D64f(p.x, p.y);
}
CVAPI(CvPoint2D64f) imgproc_phaseCorrelateRes(cv::_InputArray *src1, cv::_InputArray *src2,
                                    cv::_InputArray *window, double* response)
{
	cv::Point2d p = cv::phaseCorrelateRes(*src1, *src2, *window, response);
	return cvPoint2D64f(p.x, p.y);
}
CVAPI(void) imgproc_createHanningWindow(cv::_OutputArray *dst, CvSize winSize, int type)
{
	cv::createHanningWindow(*dst, winSize, type);
}
CVAPI(double) imgproc_threshold(cv::_InputArray *src, cv::_OutputArray *dst,
	double thresh, double maxval, int type)
{
	return cv::threshold(*src, *dst, thresh, maxval, type);
}
CVAPI(void) imgproc_adaptiveThreshold(cv::_InputArray *src, cv::_OutputArray *dst,
	double maxValue, int adaptiveMethod,
	int thresholdType, int blockSize, double C)
{
	cv::adaptiveThreshold(*src, *dst, maxValue, adaptiveMethod, thresholdType, blockSize, C);
}
CVAPI(void) imgproc_pyrDown(cv::_InputArray *src, cv::_OutputArray *dst, CvSize dstsize, int borderType)
{
	cv::pyrDown(*src, *dst, dstsize, borderType);
}
CVAPI(void) imgproc_pyrUp(cv::_InputArray *src, cv::_OutputArray *dst, CvSize dstsize, int borderType)
{
	cv::pyrUp(*src, *dst, dstsize, borderType);
}
CVAPI(void) imgproc_undistort(cv::_InputArray *src, cv::_OutputArray *dst,
	cv::_InputArray *cameraMatrix, cv::_InputArray *distCoeffs, cv::_InputArray *newCameraMatrix)
{
	cv::undistort(*src, *dst, *cameraMatrix, entity(distCoeffs), entity(newCameraMatrix));
}
CVAPI(void) imgproc_initUndistortRectifyMap(cv::_InputArray *cameraMatrix, cv::_InputArray *distCoeffs,
	cv::_InputArray *r, cv::_InputArray *newCameraMatrix, CvSize size, int m1type,
	cv::_OutputArray *map1, cv::_OutputArray *map2)
{
	cv::initUndistortRectifyMap(*cameraMatrix, *distCoeffs, *r, *newCameraMatrix, size, m1type, *map1, *map2);
}
CVAPI(float) imgproc_initWideAngleProjMap(cv::_InputArray *cameraMatrix, cv::_InputArray *distCoeffs,
	CvSize imageSize, int destImageWidth, int m1type, cv::_OutputArray *map1, cv::_OutputArray *map2, int projType, double alpha)
{
	return cv::initWideAngleProjMap(*cameraMatrix, *distCoeffs, imageSize, destImageWidth, m1type, *map1, *map2, projType, alpha);
}
CVAPI(cv::Mat*) imgproc_getDefaultNewCameraMatrix(cv::_InputArray *cameraMatrix, CvSize imgSize, int centerPrincipalPoint)
{
	cv::Mat ret = cv::getDefaultNewCameraMatrix(*cameraMatrix, imgSize, centerPrincipalPoint != 0);
	return new cv::Mat(ret);
}
CVAPI(void) imgproc_undistortPoints(cv::_InputArray *src, cv::_OutputArray *dst,
	cv::_InputArray *cameraMatrix, cv::_InputArray *distCoeffs,
	cv::_InputArray *R, cv::_InputArray *P)
{
	cv::undistortPoints(*src, *dst, *cameraMatrix, entity(distCoeffs), entity(R), entity(P));
}
CVAPI(void) imgproc_calcHist1(cv::Mat **images, int nimages,
	const int* channels, cv::_InputArray *mask,
	cv::_OutputArray *hist, int dims, const int* histSize,
	const float** ranges, int uniform, int accumulate)
{
	std::vector<cv::Mat> imagesVec(nimages);
	for (int i = 0; i < nimages; i++)
		imagesVec[i] = *(images[i]);
	cv::calcHist(&imagesVec[0], nimages, channels, entity(mask), *hist, dims, histSize, ranges, uniform != 0, accumulate != 0);
}
CVAPI(void) imgproc_calcBackProject(cv::Mat **images, int nimages,
	const int* channels, cv::_InputArray *hist, cv::_OutputArray *backProject, 
	const float** ranges, int uniform)
{
	std::vector<cv::Mat> imagesVec(nimages);
	for (int i = 0; i < nimages; i++)
		imagesVec[i] = *(images[i]);
	cv::calcBackProject(&imagesVec[0], nimages, channels, *hist, *backProject, ranges, uniform != 0);
}
CVAPI(double) imgproc_compareHist1(cv::_InputArray *h1, cv::_InputArray *h2, int method)
{
	return cv::compareHist(*h1, *h2, method);
}
CVAPI(void) imgproc_equalizeHist(cv::_InputArray *src, cv::_OutputArray *dst)
{
	cv::equalizeHist(*src, *dst);
}
CVAPI(float) imgproc_EMD(cv::_InputArray *signature1, cv::_InputArray *signature2,
	int distType, cv::_InputArray *cost, float* lowerBound, cv::_OutputArray *flow)
{
	return cv::EMD(*signature1, *signature2, distType, entity(cost), lowerBound, entity(flow));
}
CVAPI(void) imgproc_watershed(cv::_InputArray *image, cv::_OutputArray *markers)
{
	cv::watershed(*image, *markers);
}
CVAPI(void) imgproc_pyrMeanShiftFiltering(cv::_InputArray *src, cv::_OutputArray *dst,
	double sp, double sr, int maxLevel, CvTermCriteria termcrit)
{
	cv::pyrMeanShiftFiltering(*src, *dst, sp, sr, maxLevel, termcrit);
}
CVAPI(void) imgproc_grabCut(cv::_InputArray *img, cv::_OutputArray *mask, CvRect rect,
                           cv::_OutputArray *bgdModel, cv::_OutputArray *fgdModel,
                           int iterCount, int mode )
{
	cv::grabCut(*img, *mask, rect, *bgdModel, *fgdModel, iterCount, mode);
}
CVAPI(void) imgproc_distanceTransformWithLabels(cv::_InputArray *src, cv::_OutputArray *dst,
                                     cv::_OutputArray *labels, int distanceType, int maskSize,
                                     int labelType)
{
	cv::distanceTransform(*src, *dst, *labels, distanceType, maskSize, labelType);
}
CVAPI(void) imgproc_distanceTransform(cv::_InputArray *src, cv::_OutputArray *dst,
                                     int distanceType, int maskSize )
{
	cv::distanceTransform(*src, *dst, distanceType, maskSize);
}
CVAPI(int) imgproc_floodFill1(cv::_OutputArray *image,
                          CvPoint seedPoint, CvScalar newVal, CvRect *rect,
                          CvScalar loDiff, CvScalar upDiff, int flags)
{
	cv::Rect rect0;
	int ret = cv::floodFill(*image, seedPoint, newVal, &rect0, loDiff, upDiff, flags);
	*rect = rect0;
	return ret;
}
CVAPI(int) imgproc_floodFill2(cv::_OutputArray *image, cv::_OutputArray *mask,
                            CvPoint seedPoint, CvScalar newVal, CvRect *rect,
                            CvScalar loDiff, CvScalar upDiff, int flags)
{
	cv::Rect rect0;
	int ret = cv::floodFill(*image, *mask, seedPoint, newVal, &rect0, loDiff, upDiff, flags);
	*rect = rect0;
	return ret;
}
CVAPI(void) imgproc_cvtColor(cv::_InputArray *src, cv::_OutputArray *dst, int code, int dstCn)
{
	cv::cvtColor(*src, *dst, code, dstCn); 
}
CVAPI(CvMoments) imgproc_moments(cv::_InputArray *arr, int binaryImage )
{
	cv::Moments m = cv::moments(*arr, binaryImage != 0);
	return (CvMoments)m;
}
CVAPI(void) imgproc_matchTemplate(cv::_InputArray *image, cv::_InputArray *templ,
	cv::_OutputArray *result, int method)
{
	cv::matchTemplate(*image, *templ, *result, method);
}
CVAPI(void) imgproc_findContours1_vector(cv::_OutputArray *image, std::vector<std::vector<cv::Point> > **contours,
	std::vector<cv::Vec4i> **hierarchy, int mode, int method, CvPoint offset)
{
	*contours = new std::vector<std::vector<cv::Point> >;
	*hierarchy = new std::vector<cv::Vec4i>;
	cv::findContours(*image, **contours, **hierarchy, mode, method, offset);
}
CVAPI(void) imgproc_findContours1_OutputArray(cv::_OutputArray *image, std::vector<cv::Mat> **contours,
	cv::_OutputArray *hierarchy, int mode, int method, CvPoint offset)
{
	*contours = new std::vector<cv::Mat>;
	cv::findContours(*image, **contours, *hierarchy, mode, method, offset);
}
CVAPI(void) imgproc_findContours2_vector(cv::_OutputArray *image, std::vector<std::vector<cv::Point> > **contours,
	int mode, int method, CvPoint offset)
{
	*contours = new std::vector<std::vector<cv::Point> >;
	cv::findContours(*image, **contours, mode, method, offset);
}
CVAPI(void) imgproc_findContours2_OutputArray(cv::_OutputArray *image, std::vector<cv::Mat> **contours,
	int mode, int method, CvPoint offset)
{
	*contours = new std::vector<cv::Mat>;
	cv::findContours(*image, **contours, mode, method, offset);
}
CVAPI(void) imgproc_drawContours_vector(cv::_OutputArray *image,
	cv::Point **contours, int contoursSize1, int *contoursSize2,
	int contourIdx, CvScalar color, int thickness, int lineType,
	cv::Vec4i *hierarchy, int hiearchyLength, int maxLevel, CvPoint offset)
{
	std::vector<std::vector<cv::Point> > contoursVec;
	for (int i = 0; i < contoursSize1; i++)
	{
		std::vector<cv::Point> c1(contours[i], contours[i] + contoursSize2[i]);
		contoursVec.push_back(c1);
	}
	std::vector<cv::Vec4i> hiearchyVec;
	if (hierarchy != NULL)
	{
		hiearchyVec = std::vector<cv::Vec4i>(hierarchy, hierarchy + hiearchyLength);
	}

	cv::drawContours(*image, contoursVec, contourIdx, color, thickness, lineType, hiearchyVec, maxLevel, offset);
}
CVAPI(void) imgproc_drawContours_InputArray(cv::_OutputArray *image,
	cv::Mat **contours, int contoursLength,
	int contourIdx, CvScalar color, int thickness, int lineType,
	cv::_InputArray *hierarchy, int maxLevel, CvPoint offset)
{
	std::vector<std::vector<cv::Point> > contoursVec(contoursLength);
	for (int i = 0; i < contoursLength; i++)
		contoursVec[i] = *contours[i];
	cv::drawContours(*image, contoursVec, contourIdx, color, thickness, lineType, entity(hierarchy), maxLevel, offset);
}